--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,5 +1,5 @@
 .bg {
-    background-color: rgb(18, 4, 5, 0.8);
+    background-color: rgb(18, 4, 5, 0.95);
 }
 .bg-black {
     background-color: rgba(0, 0, 0, 0.7);
@@ -53,11 +53,6 @@
     -webkit-text-stroke: 1px rgba(0, 0, 0, 1.0)
 }
 
-.text-footer {
-    font-size: 1.5em;
-    text-align: center;
-}
-
 .box-shadow {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 8px;
 }
@@ -68,7 +63,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../assets/images/tobias-van-schneider-lHGeqh3XhRY-unsplash.jpg);
+    background-image: url(../assets/images/ricardo-gomez-angel-9AdeEdYB2yk-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -95,7 +90,7 @@
 }
 
 .segment {
-    padding: 20px 40px 20px 40px;
+    padding: 00px 40px 20px 40px;
     color: hsl(0, 1.7%, 76.9%);
     position: relative;
     width: auto;
@@ -109,10 +104,11 @@
 .username {
     text-align: center;
     width: 100%;
+    height: 150px;
 }
 
 .emphasis {
-    font-weight: 600;
+    font-weight: 700;
     font-stretch: expanded;
 }
 
