--- a/src/style/App.css
+++ b/src/style/App.css
@@ -77,14 +77,12 @@
     width: calc(100vw - 60px);
     height: calc(100vh - 60px);
     border-radius: 5px;
-}
-
-.scrollable{
-    min-width: 100%;
-    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.scrollable{
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -128,7 +126,7 @@ a:hover {
 }
 
 .links {
-    margin: 30px 0 0 0;
+    margin: 30px 0 80px 0;
 }
 
 .link-container {
